# devtiny

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: linux-package.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/core/: app_error.rs  app_paths.rs  command_runner.rs  mod.rs  path_guard.rs  trash.rs
src-tauri/src/filesystem/: list_files.rs  manage_file.rs  mod.rs  read_file.rs
src-tauri/src/git/: git_actions.rs  git_diff.rs  git_file_history.rs  git_restore.rs  git_status.rs  mod.rs
src-tauri/src/history/: command_history.rs  mod.rs
src-tauri/src/runtime/: compose_actions.rs  long_task.rs  mod.rs  project_setup.rs
src-tauri/src/storage/: sqlite.rs
src/app/: bootstrap.ts  i18n.ts  router.ts
src/core/commands/: api.ts  types.ts
src/core/filesystem/: api.ts  types.ts
src/core/project/: api.ts  types.ts
src/features/devtiny/changes/: ChangesView.vue  api.ts  types.ts
src/features/devtiny/files/: CodeViewer.vue  ContentPanel.vue  FileTreeNode.vue  FileTreeView.vue
src/features/devtiny/history/: FileHistoryPanel.vue  api.ts  types.ts
src/features/devtiny/project/: CommandConfirmDialog.vue  DevTinyWorkbench.vue
src/features/devtiny/runtime/: RuntimePanel.vue
