[package]
name = "devtiny"
version = "0.1.0"
description = "A tiny desktop Git and Docker helper"
authors = ["DevTiny"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["io-util", "process", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
